BLUTH, CHANGES


#### 0.6.2 (2011-01-01) ###############################

* CHANGE: Added :bluth prefix to Worker and Scheduler keys. 
* CHANGE: Depends on Familia 0.6.5
* CHANGE: Option -r for bin/bluth is now -R


#### 0.6.1 (2010-12-31) ###############################

* ADDED: Bluth.env

#### 0.6.0 (2010-12-30) ###############################

* CHANGE: Now depends on Familia 0.6
* CHANGE: Worker process name now starts with 'bluth'
* CHANGE: Bluth.pop is now correctly named Bluth.shift (b/c it's returning
          the first value in the lists)
* ADDED: Bluth::Handler


#### 0.5.3 (2010-12-17) ###############################

* CHANGE: requires Familia 0.5.3

#### 0.5.2 (2010-12-10) ###############################

Initial public release
