@@ -39,7 +39,7 @@ end
 
 
 Rake::RDocTask.new do |rdoc|
-  version = "#{config[:MAJOR]}.#{config[:MINOR]}.#{config[:PATCH]}.#{config[:BUILD]}"
+  version = "#{config[:MAJOR]}.#{config[:MINOR]}.#{config[:PATCH]}"
   rdoc.rdoc_dir = "doc"
   rdoc.title = "#{name} #{version}"
   rdoc.rdoc_files.include("README*")
